Fix fdo#69381 by skipping empty option groups

Change-Id: Idaf0f0a3f5430a5aea6f77a003e205116a87cc67